<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Sudoku!</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="restaurant_label">Restaurants</string>
    <string name="personal_label">Personal Care</string>
    <string name="other_label">Other Stores</string>
    <string name="events_label">Events</string>
    <string name="hotel_label">Hotel/Travel</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="app_name">PuzzlePerks</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Puzzle Perks</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    
	<!-- About Screen -->
	<string name="about_title">About PuzzlePerks</string>
	<string name="about_text">\
PuzzlePerks is based on Sudoku, a logic puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the characters
in the "Key"" exactly once.  Complete the puzzle to earn your
<b>valuable coupon!</b>
	</string>

	<!-- Settings Screen -->
	<string name="settings_label">Settings</string>
	<string name="settings_title">Sudoku settings</string>
	<string name="settings_shortcut">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music</string>
	<string name="hints_title">Hints</string>
	<string name="hints_summary">Show hints during play</string>

	<!-- New Game -->
	<string name='new_game_title'>Difficulty</string>
	<string name='easy_label'>Easy</string>
	<string name='medium_label'>Medium</string>
	<string name='hard_label'>Hard</string>

	<!-- Game -->
	<string name='game_title'>PuzzlePerks</string>
	<string name='no_moves_label'>No moves</string>
	<string name='keypad_title'>Keypad</string>
	<string name='you_won_label'>You Won!</string>
	
	<!--  Restaurants  -->
	<string name='r1_label'>Ambrosia India Bistro</string>
	<string name='r2_label'>Bubba Gumps</string>
	<string name='r3_label'>Sardine Factory</string>
	<string name='r4_label'>Sly McFly\'s</string>
	<string name='r5_label'>Cannery Row Brewing</string>
	<string name='r6_label'>Johnny Rockets</string>
	<string name="coupon_title">You Won This Coupon!</string>
	<string name='o1_label'>Outdoor World</string>
	<string name='o2_label'>Century Cinemas</string>
	<string name='o3_label'>Creek Bridge Dental</string>
	<string name='p1_label'>Angel Nails</string>
	<string name='p2_label'>Kleen Cuts</string>
	<string name='p3_label'>Saharah Sun Tanning And Boutique</string>
	<string name='h1_label'>Best Western Ramona Inn</string>
	<string name='h2_label'>Blue Lagoon Inn</string>
	<string name='h3_label'>Cypress Tree Inn</string>
	<string name='h4_label'>Lone Oak Lodges</string>
	<string name='e1_label'>McCall Events</string>
	<string name='e2_label'>Monterey Jazz Festival</string>
	<string name="server_url">http://wump.tk/~keith/PuzzlePerks.net/server.php</string>
	<string name="coupon_url">http://wump.tk/~keith/PuzzlePerks.net/coupon.html</string>
	<string name="coupphp_url">http://wump.tk/~keith/PuzzlePerks.net/coupon.php</string>
								
</resources>
