<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/background"
		android:orientation="vertical"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_gravity="center"
		android:paddingLeft="20dip"
		android:paddingRight="20dip" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" 
        android:textColor="#222222" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
			
		<TableLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:stretchColumns="*" >
			<TableRow>
				<Button android:id="@+id/restaurant_button" android:text="@string/restaurant_label" />
				<Button android:id="@+id/personal_button" android:text="@string/personal_label" />
			</TableRow>
		    			<TableRow>
				<Button android:id="@+id/events_button" android:text="@string/events_label" />
				<Button android:id="@+id/hotel_button" android:text="@string/hotel_label" />
			</TableRow>
			<TableRow>
				<Button android:id="@+id/other_button" android:text="@string/other_label" />
				<Button android:id="@+id/about_button" android:text="@string/about_label" />
			</TableRow>
		</TableLayout>

	</LinearLayout>
</LinearLayout>